objects/FSP_GP__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>FSP GPs</relationshipLabel>
        <relationshipName>FSP_GPs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FSP_GP_NPN__c</fullName>
        <formula>Account__r.Agency_NPN__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FSP GP NPN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSP_GP__c</fullName>
        <label>FSP/GP</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>FSP</fullName>
                </value>
                <value>
                    <fullName>GP</fullName>
                </value>
                <value>
                    <fullName>Direct</fullName>
                    <isActive>false</isActive>
                    <label>Direct</label>
                </value>
                <value>
                    <fullName>None</fullName>
                    <isActive>false</isActive>
                    <label>None</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>FSP/GP</relationshipLabel>
        <relationshipName>FSP_GPs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Partner__c</fullName>
        <label>Partner</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>FSP_GP__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AP Benefit Advisors, LLC</fullName>
                </value>
                <value>
                    <fullName>Benefit Design Group, LLC</fullName>
                </value>
                <value>
                    <fullName>BenefitMall</fullName>
                </value>
                <value>
                    <fullName>CBIZ</fullName>
                </value>
                <value>
                    <fullName>Direct</fullName>
                </value>
                <value>
                    <fullName>Employee Benefits Corporation of America</fullName>
                </value>
                <value>
                    <fullName>Group Benefit Services</fullName>
                </value>
                <value>
                    <fullName>Hamilton Insurance Agency</fullName>
                </value>
                <value>
                    <fullName>Insurance Marketing Center, Inc.</fullName>
                </value>
                <value>
                    <fullName>Kelly &amp; Associates Insurance Group</fullName>
                </value>
                <value>
                    <fullName>NCAS</fullName>
                </value>
                <value>
                    <fullName>Potomac Basin Group Assoc., Inc.</fullName>
                </value>
                <value>
                    <fullName>Crawford Advisors, LLC</fullName>
                    <isActive>false</isActive>
                    <label>Crawford Advisors, LLC</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Producer of Record</label>
        <type>Checkbox</type>
    </fields>
    <description>This is a custom object to add new FSP/GPs. It is created to support the updates to be sent to Broker Hub(632.0 project).</description>
    <label>FSP GP</label>
    <nameField>
        <displayFormat>FSPGP-{000000}</displayFormat>
        <label>FSP GP Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FSP GPs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>